ref.rs

#[test]
fn bindgen_test_layout_x264_image_t() {
    assert_eq!(
        ::std::mem::size_of::<x264_image_t>(),
        56usize,
        concat!("Size of: ", stringify!(x264_image_t))
    );
    assert_eq!(
        ::std::mem::align_of::<x264_image_t>(),
        8usize,
        concat!("Alignment of ", stringify!(x264_image_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_image_t>())).i_csp as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_image_t),
            "::",
            stringify!(i_csp)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_image_t>())).i_plane as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_image_t),
            "::",
            stringify!(i_plane)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_image_t>())).i_stride as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_image_t),
            "::",
            stringify!(i_stride)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_image_t>())).plane as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_image_t),
            "::",
            stringify!(plane)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct x264_image_properties_t {
    pub quant_offsets: *mut f32,
    pub quant_offsets_free:
        ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
    pub mb_info: *mut u8,
    pub mb_info_free:
        ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void)>,
    pub f_ssim: f64,
    pub f_psnr_avg: f64,
    pub f_psnr: [f64; 3usize],
    pub f_crf_avg: f64,
}
#[test]
fn bindgen_test_layout_x264_image_properties_t() {
    assert_eq!(
        ::std::mem::size_of::<x264_image_properties_t>(),
        80usize,
        concat!("Size of: ", stringify!(x264_image_properties_t))
    );
    assert_eq!(
        ::std::mem::align_of::<x264_image_properties_t>(),
        8usize,
        concat!("Alignment of ", stringify!(x264_image_properties_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<x264_image_properties_t>())).quant_offsets as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_image_properties_t),
            "::",
            stringify!(quant_offsets)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<x264_image_properties_t>())).quant_offsets_free as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_image_properties_t),
            "::",
            stringify!(quant_offsets_free)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_image_properties_t>())).mb_info as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_image_properties_t),
            "::",
            stringify!(mb_info)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<x264_image_properties_t>())).mb_info_free as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_image_properties_t),
            "::",
            stringify!(mb_info_free)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_image_properties_t>())).f_ssim as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_image_properties_t),
            "::",
            stringify!(f_ssim)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<x264_image_properties_t>())).f_psnr_avg as *const _ as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_image_properties_t),
            "::",
            stringify!(f_psnr_avg)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_image_properties_t>())).f_psnr as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_image_properties_t),
            "::",
            stringify!(f_psnr)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<x264_image_properties_t>())).f_crf_avg as *const _ as usize
        },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_image_properties_t),
            "::",
            stringify!(f_crf_avg)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct x264_picture_t {
    pub i_type: ::std::os::raw::c_int,
    pub i_qpplus1: ::std::os::raw::c_int,
    pub i_pic_struct: ::std::os::raw::c_int,
    pub b_keyframe: ::std::os::raw::c_int,
    pub i_pts: i64,
    pub i_dts: i64,
    pub param: *mut x264_param_t,
    pub img: x264_image_t,
    pub prop: x264_image_properties_t,
    pub hrd_timing: x264_hrd_t,
    pub extra_sei: x264_sei_t,
    pub opaque: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_x264_picture_t() {
    assert_eq!(
        ::std::mem::size_of::<x264_picture_t>(),
        240usize,
        concat!("Size of: ", stringify!(x264_picture_t))
    );
    assert_eq!(
        ::std::mem::align_of::<x264_picture_t>(),
        8usize,
        concat!("Alignment of ", stringify!(x264_picture_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_picture_t>())).i_type as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_picture_t),
            "::",
            stringify!(i_type)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_picture_t>())).i_qpplus1 as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_picture_t),
            "::",
            stringify!(i_qpplus1)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_picture_t>())).i_pic_struct as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_picture_t),
            "::",
            stringify!(i_pic_struct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_picture_t>())).b_keyframe as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_picture_t),
            "::",
            stringify!(b_keyframe)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_picture_t>())).i_pts as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_picture_t),
            "::",
            stringify!(i_pts)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_picture_t>())).i_dts as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_picture_t),
            "::",
            stringify!(i_dts)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_picture_t>())).param as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_picture_t),
            "::",
            stringify!(param)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_picture_t>())).img as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_picture_t),
            "::",
            stringify!(img)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_picture_t>())).prop as *const _ as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_picture_t),
            "::",
            stringify!(prop)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_picture_t>())).hrd_timing as *const _ as usize },
        176usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_picture_t),
            "::",
            stringify!(hrd_timing)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_picture_t>())).extra_sei as *const _ as usize },
        208usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_picture_t),
            "::",
            stringify!(extra_sei)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<x264_picture_t>())).opaque as *const _ as usize },
        232usize,
        concat!(
            "Offset of field: ",
            stringify!(x264_picture_t),
            "::",
            stringify!(opaque)
        )
    );
}
extern "C" {
    pub fn x264_picture_init(pic: *mut x264_picture_t);
}
extern "C" {
    pub fn x264_picture_alloc(
        pic: *mut x264_picture_t,
        i_csp: ::std::os::raw::c_int,
        i_width: ::std::os::raw::c_int,
        i_height: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn x264_picture_clean(pic: *mut x264_picture_t);
}
extern "C" {
    pub fn x264_encoder_open_157(arg1: *mut x264_param_t) -> *mut x264_t;
}
extern "C" {
    pub fn x264_encoder_reconfig(
        arg1: *mut x264_t,
        arg2: *mut x264_param_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn x264_encoder_parameters(arg1: *mut x264_t, arg2: *mut x264_param_t);
}
extern "C" {
    pub fn x264_encoder_headers(
        arg1: *mut x264_t,
        pp_nal: *mut *mut x264_nal_t,
        pi_nal: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn x264_encoder_encode(
        arg1: *mut x264_t,
        pp_nal: *mut *mut x264_nal_t,
        pi_nal: *mut ::std::os::raw::c_int,
        pic_in: *mut x264_picture_t,
        pic_out: *mut x264_picture_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn x264_encoder_close(arg1: *mut x264_t);
}
extern "C" {
    pub fn x264_encoder_delayed_frames(arg1: *mut x264_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn x264_encoder_maximum_delayed_frames(arg1: *mut x264_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn x264_encoder_intra_refresh(arg1: *mut x264_t);
}
extern "C" {
    pub fn x264_encoder_invalidate_reference(arg1: *mut x264_t, pts: i64) -> ::std::os::raw::c_int;
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
